--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fullcalendar/daygrid": "^5.9.0",
+    "@fullcalendar/interaction": "^5.9.0",
+    "@fullcalendar/react": "^5.9.0",
+    "@fullcalendar/timegrid": "^5.9.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.13.0",
@@ -20,6 +24,7 @@
     "react": "^17.0.2",
     "react-animation": "^1.2.2",
     "react-bootstrap": "^1.4.3",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^0.7.9",
     "react-icons": "^4.2.0",
