--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.6.0",
     "http-proxy-middleware": "^1.0.6",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.2",
     "react": "^17.0.2",
@@ -37,6 +38,7 @@
     "react-horizontal-scrolling-menu": "^0.7.9",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
