--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/core": "^5.9.0",
     "@fullcalendar/daygrid": "^5.9.0",
     "@fullcalendar/interaction": "^5.9.0",
+    "@fullcalendar/list": "^5.10.1",
     "@fullcalendar/react": "^5.9.0",
     "@fullcalendar/timegrid": "^5.9.0",
     "@material-ui/core": "^4.11.0",
